--- a/localisation/braz_por/MD_focus_RAJ_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_RAJ_l_braz_por.yml
@@ -807,7 +807,7 @@
  RAJ_arjun: "Tanque de Batalha Principal ARJUN"
  RAJ_arjun_desc: "Arjun é um tanque de batalha principal desenvolvido pelo maior empreiteiro de defesa da Índia, a Organização de Pesquisa e Desenvolvimento de Defesa (DRDO), para o Exército Indiano. O tanque leva o nome de Arjun, um dos personagens principais do poema épico indiano, o Mahabharata."
  RAJ_t90_rus: "Russo T90"
- RAJ_t90_rus_desc: "O tanque de batalha principal russo T-90 foi adotado em serviço em 1992 com o nome de T-90. Em 1999, o tanque recebeu o nome verbal \"Vladimir"
+ RAJ_t90_rus_desc: "O tanque de batalha principal russo T-90 foi adotado em serviço em 1992 sob o nome de T-90. Em 1999, o tanque recebeu o nome verbal de 'Vladimir'"
  RAJ_british_challenger: "Desafiador Britânico"
  RAJ_british_challenger_desc: "Um tanque de batalha principal produzido pela empresa britânica Vickers Defense Systems (agora parte da BAE Systems). É o terceiro tanque a levar o nome Challenger. Embora o Challenger 2 tenha sido desenvolvido com base no Challenger, o novo tanque difere do modelo anterior com novos equipamentos e componentes: apenas 5% das peças são comuns a ambos os modelos. O Challenger 2 substituiu agora o modelo anterior em serviço no Exército Britânico."
  RAJ_bmp_sarath: "BMP Sarath"
