--- a/localisation/english/MD_focus_GEO_l_english.yml
+++ b/localisation/english/MD_focus_GEO_l_english.yml
@@ -36,7 +36,7 @@
  GEO_osset_abkhaz_priznat: "Recognize Abkhazia and Ossetia"
  GEO_osset_abkhaz_priznat_desc: "Time has come to recognize South Ossetia and Abkhazia as separate and independent states as a mean of ensuring peace in Georgia and the entire region."
  GEO_diplomatic_requests_fromrussia: "Diplomatic requests from Russia"
- GEO_diplomatic_requests_fromrussia_desc: "gimme gimme"
+ GEO_diplomatic_requests_fromrussia_desc: "gimme gimme gimme"
  GEO_join_nato_geo: "Join NATO"
  GEO_join_nato_geo_desc: "West will devour us"
  GEO_bezhenci_help_of_uf: "Help refugees"
