--- a/localisation/french/MD_decisions_l_french.yml
+++ b/localisation/french/MD_decisions_l_french.yml
@@ -366,7 +366,7 @@
  cost_6_0_blocked: "£treasury §R6.0§!"
  cost_6_0_tooltip: "Cet achat coûtera 6.0 §Hmilliards§!"
  cost_7_0: "£treasury 7.0"
- cost_7_0_blocked: "§R7.0§!£treasury"
+ cost_7_0_blocked: "£treasury §R7.0§!"
  cost_7_0_tooltip: "Cet achat coûtera 7.0 §Hmilliards§!"
  cost_7_5: "£treasury 7.5"
  cost_7_5_blocked: "£treasury §R7.5§!"
@@ -492,7 +492,7 @@
  command_power_more_than_145_blocked: "£command_power §R145§!"
  command_power_more_than_125: "£command_power §H125§!"
  command_power_more_than_125_blocked: "£command_power §R125§!"
- command_power_more_than_100: "§H100§!£command_power"
+ command_power_more_than_100: "£command_power §H100§!"
  command_power_more_than_100_blocked: "£command_power §R100§!"
  command_power_more_than_75: "£command_power §H75§!"
  command_power_more_than_75_blocked: "£command_power §R75§!"
