--- a/localisation/french/MD_focus_CUB_l_french.yml
+++ b/localisation/french/MD_focus_CUB_l_french.yml
@@ -4,10 +4,10 @@
  raul_strenght_power_tt: "§GRaul renforcera sa position dans le parti§!"
  CUB_allow_elections_tt: "§GLes élections seront autorisées§!"
  CUB_allow_parties_tt: "§GNous autoriserons certains partis d'opposition§!"
- CUB_migel_comeback: "§YMigel Mario Diaz will become leader of Partido Communista de Cuba§! §G(emerging outlook)§!"
- cuba_alba_tt: "Will Open ALBA decisions"
+ CUB_migel_comeback: "§YMigel Mario Diaz deviendra leader du Partido Comunista de Cuba§! §G(perspectives émergentes)§!"
+ cuba_alba_tt: "Les décisions de l'ALBA s'ouvriront"
  CUB_start_democratic_venezuellas: "§!Nous allons lancer une révolution démocratique au Venezuela§!"
- CUB_has_updated_the_military_trigger_TT: "Don`t have national spirit §RObsolete Military Force§!"
+ CUB_has_updated_the_military_trigger_TT: "N'ayez pas d'esprit national §ROForce militaire obsolète§!"
  cub_foreign_legion_TT: "§RNous formerons une brigade de mercenaires étrangers§!"
  CUB_blockade_fight: "§RLe blocus américain continue§!"
  cub_liberal_union_tt: "L'Union Libérale Cubaine deviendra le parti dirigeant"
@@ -24,8 +24,8 @@
  CUB_invite_puerto_tt: "Nous pourrons inviter [PTR.GetNamewithFlag] dans notre confédération"
  CUB_invite_haiti_tt: "Nous pourrons inviter [HAI.GetNamewithFlag] dans notre confédération"
  CUB_invite_dominicana_tt: "Nous pourrons inviter [DOM.GetNamewithFlag] dans notre confédération"
- Confederaion_HAI_no_tt: "§Y[HAI.GetNamewithFlag]§! is a member of the Antillean Confederation: §RNO§!"
- Confederaion_HAI_yes_tt: "§Y[HAI.GetNamewithFlag]§! is a member of the Antillean Confederation: §GYES§!"
+ Confederaion_HAI_no_tt: "§Y[HAI.GetNamewithFlag]§! est membre de la Confédération Antillaise : §RNON§!"
+ Confederaion_HAI_yes_tt: "§Y[HAI.GetNamewithFlag]§! est membre de la Confédération Antillaise : §GOUI§!"
  Confederaion_DOM_loc_no_tt: "§Y[DOM.GetNamewithFlag]§! is a member of the Antillean Confederation: §RNO§!"
  Confederaion_DOM_loc_yes_tt: "§Y[DOM.GetNamewithFlag]§! is a member of the Antillean Confederation: §GYES§!"
  Confederaion_COL_loc_no_tt: "§Y[COL.GetNamewithFlag]§! is a member of the Antillean Confederation: §RNO§!"
@@ -46,7 +46,7 @@
  blockade_MEX_loc_no_tt: "§Y[MEX.GetNamewithFlag]§! takes part in the blockade: §GNO§!"
  cub_special_unit_tt: "§YThe §RBlack Wasps§! Brigade will be created§!"
  cub_modern_tt: "§YNous commencerons à moderniser l'armée§!"
- cub_military_coop_with_sov_tt: "Russia, since the last century, has been our main international partner - both economically and militarily. We must revive cooperation with them in order to confront the United States."
+ cub_military_coop_with_sov_tt: "Depuis le siècle dernier, la Russie est notre principal partenaire international, tant sur le plan économique que militaire. Nous devons relancer la coopération avec eux pour affronter les États-Unis."
  cub_military_coop_with_unionstate_tt: "L’État fédéré est l’Union de la Russie et de la Biélorussie, dans sa forme originale, et la Russie nous a toujours soutenu et a toujours été notre alliée. Nous devons renforcer la coopération avec l’État de l’Union"
  cub_military_coop_with_sov_name_tt: "Coopération militaire avec la Russie"
  cub_military_coop_with_unionstate_name_tt: "Coopération militaire avec l'État de l'Union"
@@ -54,7 +54,7 @@
  antillean_conf: "Confédération antillaise"
  CUB_confederation: "Confédération antillaise"
  cuba.3.t: "Nouvelles réformes du commandement"
- cuba.3.d: "After many years of inactivity, efforts to bring attention to our dated military have allowed us to begin an armed forces reform program. The most important task - and main objective - of these reforms is to replace the antiquated command structure of our forces and modernize our equipment"
+ cuba.3.d: "Après de nombreuses années d’inactivité, les efforts visant à attirer l’attention sur notre armée désuète nous ont permis de lancer un programme de réforme des forces armées. La tâche la plus importante - et l'objectif principal - de ces réformes est de remplacer la structure de commandement désuète de nos forces et de moderniser notre équipement."
  cuba.3.a: "Nous redeviendrons puissants !"
  cuba.16: "Visite du Pape à Cuba"
  cuba.16.t: "Visite du Pape à Cuba"
@@ -69,54 +69,54 @@
  cuba.17.b: "Non"
  cuba.14: "Cuba propose de résoudre le problème de Guantanamo"
  cuba.14.t: "Cuba propose de résoudre le problème de Guantanamo"
- cuba.14.d: "The Cuban delegation suggests that we settle the Guantanamo issue once and for all. We can give them the territory, or we can keep it for ourselves"
- cuba.14.a: "Why do we need this land?"
+ cuba.14.d: "La délégation cubaine propose de régler une fois pour toutes la question de Guantanamo. On peut leur donner le territoire, ou on peut le garder pour nous"
+ cuba.14.a: "Pourquoi avons-nous besoin de cette terre ?"
  cuba.14.b: "Non"
  cuba.25: "Cuba veut notre protection"
  cuba.25.t: "Cuba veut notre protection"
- cuba.25.d: "The Cuban government has asked us for protection and security guarantees"
+ cuba.25.d: "Le gouvernement cubain nous a demandé des garanties de protection et de sécurité"
  cuba.25.b: "Non"
- cuba.25.a: "Let's protect our socialist brothers"
+ cuba.25.a: "Protégeons nos frères socialistes"
  cuba.9: "Fidel Castro au pouvoir"
  cuba.9.t: "Fidel Castro au pouvoir"
- cuba.9.d: "Our, leader, fighter and liberator of our people, remains in power. He will continue to lead Cuba into a bright future!"
+ cuba.9.d: "Notre leader, combattant et libérateur de notre peuple, reste au pouvoir. Il continuera à conduire Cuba vers un avenir radieux !"
  cuba.9.a: "Hourra !"
  cuba.12: "Castro a annoncé la nouvelle politique cubaine"
  cuba.12.t: "Castro a annoncé la nouvelle politique cubaine"
  cuba.12.d: "Lors du nouveau congrès du Parti communiste de Cuba, Fidel Castro a annoncé la transition vers un système démocratique et coordonné les changements à Cuba"
- cuba.12.a: "Uhm... Okay"
+ cuba.12.a: "Euh... Okay"
  cuba_news.29: "L'armée cubaine s'entraîne avec l'OTAN"
  cuba_news.29.t: "L'armée cubaine s'entraîne avec l'OTAN"
- cuba_news.29.d: "Today, a new set of exercises between Cuba and NATO countries officially began. Both Cuba and the alliance have agreed to expand military cooperation and strengthen the protection of Cuba's democracy and freedom. Also, a US army base will be established inside Cuba's borders to ensure the continued security of the island"
+ cuba_news.29.d: "Aujourd'hui, les exercices entre Cuba et les pays de l'OTAN ont officiellement commencé, les parties ont convenu d'élargir la coopération militaire et de renforcer la protection de la démocratie et de la liberté de Cuba. En outre, une base militaire américaine sera établie sur le territoire de Cuba pour assurer la sécurité de l'île."
  cuba_news.29.a: "Cuba est devenue pro-occidentale..."
  cuba_news.30: "Cuba a repris Guantanamo"
  cuba_news.30.t: "Cuba a repris Guantanamo"
  cuba_news.30.d: "La délégation américaine a accepté de placer le port de Guantanamo sous contrôle cubain"
  cuba_news.30.a: "Intéressant"
  cuba.26: "Ils étaient d'accord"
- cuba.26.t: "The United States accepts our offer!"
+ cuba.26.t: "Les États-Unis acceptent notre offre !"
  cuba.26.d: "La délégation américaine est d'accord, Guantanamo est à nouveau à nous !"
  cuba.26.a: "Yankee, rentre chez toi"
  cuba.18: "Le Venezuela a accepté"
  cuba.18.t: "Le Venezuela a accepté notre offre"
  cuba.18.d: "Le gouvernement vénézuélien a annoncé son acceptation de notre proposition de créer l'alliance ALBA"
  cuba.18.a: "Super"
- cuba.19: "Venezuela did not agree"
- cuba.19.t: "Venezuela did not agree"
- cuba.19.d: "They rejected our offer. in their opinion, it is not profitable for them"
- cuba.19.a: "Sad."
- cuba_news.24: "Cuba has become an observer country in the EAEU"
- cuba_news.24.t: "Cuba has become an observer country in the EAEU"
- cuba_news.24.d: "The EAEU countries granted the position of observer status to Cuba at the EAEU"
- cuba_news.24.a: "Cuba continues to open up to the world"
- cuba.27: "USA rejected"
- cuba.27.t: "USA rejected our offer"
- cuba.27.d: "Guantanamo stays under their control"
- cuba.27.a: "And how to talk with them"
- cuba_news.20: "ALBA being formed"
- cuba_news.20.t: "ALBA being formed"
- cuba_news.20.d: "Today, the Governments of Cuba and Venezuela officially announce the creation of the ALBA alliance"
- cuba_news.20.a: "A new force in America?"
+ cuba.19: "Le Venezuela n'est pas d'accord"
+ cuba.19.t: "Le Venezuela n'est pas d'accord"
+ cuba.19.d: "Ils ont rejeté notre offre, à leur avis, ce n'est pas rentable pour eux"
+ cuba.19.a: "triste"
+ cuba_news.24: "Cuba est devenue pays observateur au sein de l'EAEU"
+ cuba_news.24.t: "Cuba est devenue pays observateur au sein de l'EAEU"
+ cuba_news.24.d: "Les pays de l'UEE ont accordé à Cuba le statut d'observateur auprès de l'UEE"
+ cuba_news.24.a: "Cuba continue de s'ouvrir au monde"
+ cuba.27: "Les États-Unis ont rejeté"
+ cuba.27.t: "Les États-Unis ont rejeté notre offre"
+ cuba.27.d: "Guantanamo reste sous leur contrôle"
+ cuba.27.a: "Et comment parler avec eux"
+ cuba_news.20: "L'ALBA en cours de création"
+ cuba_news.20.t: "L'ALBA en cours de création"
+ cuba_news.20.d: "Aujourd'hui, les gouvernements de Cuba et du Venezuela annoncent officiellement la création de l'alliance ALBA"
+ cuba_news.20.a: "Une nouvelle force en Amérique ?"
  cuba.21: "ALBA projects are successful"
  cuba.21.t: "ALBA projects are successful"
  cuba.21.d: "With the help of ALBA projects, we were able to increase our influence in other countries, improve our economy, achieve energy independence and develop trade with other countries and alliances"
