--- a/localisation/french/MD_focus_EGY_l_french.yml
+++ b/localisation/french/MD_focus_EGY_l_french.yml
@@ -89,20 +89,20 @@
  EGY_expansion_of_personnel_desc: "Pour étendre les capacités de notre agence, nous devrons peut-être étendre notre réseau dans les pays voisins."
  EGY_counter_radicalism: "Lutter contre le radicalisme"
  EGY_counter_radicalism_desc: "Des radicaux stupides résident dans notre pays comme des parasites. Il faut s'en débarrasser !"
- EGY_clear_out_alqaeda: "Clearing Out Al-Qaeda"
- EGY_clear_out_alqaeda_desc: "Al-Qaeda has put their roots into our country, we have to tear them off!"
- EGY_bedouin_invest: "Raid Islamist Bases"
- EGY_bedouin_invest_desc: "Deeply in the sands of Sinai, many islamist groups have entrenched themselves to undermine our prosperity. We need to liquidate them."
- EGY_outdated_army_idea: "Heavily Outdated Army"
- EGY_outdated_army_idea_desc: "The Egyptian Army is a shadow of it's former self. To ensure our security, we must repair our Army and get it caught up with the rest of the world."
- EGY_outdated_army_idea_1: "Outdated Army"
- EGY_outdated_army_idea_1_desc: "The Egyptian Army is a shadow of it's former self. To ensure our security, we must repair our Army and get it caught up with the rest of the world."
- EGY_outdated_army_idea_2: "Moderately Outdated Army"
- EGY_outdated_army_idea_2_desc: "The Egyptian Army is a shadow of it's former self. To ensure our security, we must repair our Army and get it caught up with the rest of the world."
- EGY_outdated_army_idea_3: "Slightly Outdated Army"
- EGY_outdated_army_idea_3_desc: "The Egyptian Army is a shadow of it's former self. To ensure our security, we must repair our Army and get it caught up with the rest of the world."
- Egypt.18.t: "Egypt warns us about terrorists!"
- Egypt.18.d: "Egypt recently warned us that a very influential salafist terrorist from Egypt, Hassan Mustafa Osama Nasr, is now in hiding in Italy. They hope that we, together with Egyptian IA and CIA would cooperate to capture him."
+ EGY_clear_out_alqaeda: "Éliminer Al-Qaïda"
+ EGY_clear_out_alqaeda_desc: "Al-Qaida a implanté ses racines dans notre pays, il faut les arracher !"
+ EGY_bedouin_invest: "Raids sur des bases islamistes"
+ EGY_bedouin_invest_desc: "Au plus profond du Sinaï, de nombreux groupes islamistes se sont retranchés pour miner notre prospérité. Nous devons les liquider."
+ EGY_outdated_army_idea: "Armée très dépassée"
+ EGY_outdated_army_idea_desc: "L’armée égyptienne n’est plus que l’ombre d’elle-même. Pour assurer votre sécurité, nous devons réparer notre armée et la rattraper avec le reste du monde."
+ EGY_outdated_army_idea_1: "Armée obsolète"
+ EGY_outdated_army_idea_1_desc: "L’armée égyptienne n’est plus que l’ombre d’elle-même. Pour assurer votre sécurité, nous devons réparer notre armée et la rattraper avec le reste du monde."
+ EGY_outdated_army_idea_2: "Armée moyennement obsolète"
+ EGY_outdated_army_idea_2_desc: "L’armée égyptienne n’est plus que l’ombre d’elle-même. Pour assurer votre sécurité, nous devons réparer notre armée et la rattraper avec le reste du monde."
+ EGY_outdated_army_idea_3: "Armée un peu dépassée"
+ EGY_outdated_army_idea_3_desc: "L’armée égyptienne n’est plus que l’ombre d’elle-même. Pour assurer votre sécurité, nous devons réparer notre armée et la rattraper avec le reste du monde."
+ Egypt.18.t: "L'Egypte nous met en garde contre les terroristes !"
+ Egypt.18.d: "L’Égypte nous a récemment avertis qu’un terroriste salafiste égyptien très influent, Hassan Mustafa Osama Nasr, se cache désormais en Italie. Ils espèrent que nous coopérerons avec l’IA et la CIA égyptiennes pour le capturer."
  Egypt.18.a: "Bien sûr！"
  EGY_consp_europe: "Conspiracy in Europe"
  EGY_consp_europe_desc: "We must prepare our conspiracy base in Italy and warn Italian government about the terrorist who resides in their country."
