--- a/localisation/french/MD_focus_GER_l_french.yml
+++ b/localisation/french/MD_focus_GER_l_french.yml
@@ -2614,7 +2614,9 @@
  bavaria.1.b: "Absolument pas!"
  GER_agenda_2010: "Agenda 2010"
  GER_agenda_2010_desc: "Gerhard Schröder a toujours été un modéré parmi les sociaux-démocrates et a donc prôné la retenue budgétaire. L'« Agenda 2010 » est un projet ambitieux de coupes budgétaires et de réformes bureaucratiques qui suscitera sans aucun doute de vives critiques de la part des groupes de gauche et poussera le gouvernement vers le centre – mais il pourrait être fantastique pour le progrès économique."
- GER_strengthen_the_service_sector: "Strengthen the Service Sector"
- GER_strengthen_the_service_sector_desc: "We must strengthen the service sector in order to fully modernize our economy."
- GER_european_business_opportunities: "European Business Opportunities"
- GER_european_business_opportunities_desc: "By opening our economy to the rest of Europe, we will be able to fully utilize investments and opportunities provided by the new investment pool."
+ GER_strengthen_the_service_sector: "Renforcer le secteur des services"
+ GER_strengthen_the_service_sector_desc: "Nous devons renforcer le secteur des services afin de moderniser pleinement notre économie."
+ GER_european_business_opportunities: "Opportunités d'affaires européennes"
+ GER_european_business_opportunities_desc: "En ouvrant notre économie au reste de l’Europe, nous serons en mesure d’utiliser pleinement les investissements et les opportunités offerts par le nouveau pool d’investissement."
+ GER_international_business: "Affaires internationales"
+ GER_international_business_desc: "L'Allemagne se présente souvent comme \"Exportweltmeister\", \"champion mondial des exportations\". L’économie allemande a traditionnellement enregistré d’importants excédents commerciaux, vendant bien plus aux autres pays industrialisés que ce que l’Allemagne elle-même leur achète. La poursuite d’une politique favorable à l’exportation nécessite une grande dose de pragmatisme politique extérieur – l’argent d’un dictateur est après tout aussi bon que l’argent d’un leader populaire."
