--- a/localisation/french/MD_focus_LBA_l_french.yml
+++ b/localisation/french/MD_focus_LBA_l_french.yml
@@ -1115,7 +1115,7 @@
  LBA_send_mercenaries_tt_1: "Si nous avons terminé le focus §Y$LBA_support_darfur$§! :\n"
  LBA_send_mercenaries_tt_2: "If we have completed focus §Y$LBA_support_sudan$§!:\n"
  LBA_gaddafis_dream: "Gaddafi's Dream"
- LBA_gaddafis_dream_desc: "Once he came to power, Muammar Gaddafi wanted to create the Uniter Arab States, and even did some progress with temporary unions with Tunisia and Egypt. However, after some bad blood with Arab leaders and the death of Arab nationalism, this dream seems to have crumbled. However, there are other paths Gaddafi could take..."
+ LBA_gaddafis_dream_desc: "Once he came to power, Muammar Gaddafi wanted to create the United Arab States, and even did some progress with temporary unions with Tunisia and Egypt. However, after some bad blood with Arab leaders and the death of Arab nationalism, this dream seems to have crumbled. However, there are other paths Gaddafi could take..."
  LBA_approach_algeria: "Approach Algeria"
  LBA_approach_algeria_desc: "Algeria is a long-time partner in the region. Neither of us are really fond of the West, we have struggled together against Islamists and both of us strong supporters of Sahrawi independence from Morocco. It is important we stay on good terms with Algeria."
  LBA_approach_egypt: "Approach Egypt"
@@ -2267,7 +2267,7 @@
  LBA_gmmr_jaghbub_desc: "In the East of the country, right on the border with Egypt, just south of Tobruk, there is a small town of Jaghbub. The area is a natural oasis sitting on top of an aquifer. By constructing a well here, we can bring fresh water to Tobruk."
  aozou_strip_occupation_decisions: "Aouzou Strip Occupation"
  aozou_strip_occupation_decisions_desc: "With the Aouzou Strip being a contested region between us and our neighbour, the chaos they are having might enable us to take control of the region."
- generic_occupy_aouzou_strip: "Occupy The Aozou Strip"
+ generic_occupy_aouzou_strip: "Occupy The Aouzou Strip"
  generic_occupy_aouzou_strip_desc: "[580.owner.GetNameDef]'s current status makes them unable to effectively extend control over the [580.GetName]. We should send a small contingent of troops to secure the area. It is unlikely that [580.owner.GetName] will resist."
  generic_occupy_aouzou_strip_tt: "§R[580.owner.GetNameDef] might declare war on us!§!"
  LibyaFocus.104.t: "[FROM.GetNameDef] Occupies The [580.GetName]"
