--- a/localisation/polish/MD_focus_FRA_l_polish.yml
+++ b/localisation/polish/MD_focus_FRA_l_polish.yml
@@ -746,7 +746,7 @@
  FRA_repealed_the_ordinance_opinion: "Uchyliło rozporządzenie"
  FRA_francophone_solidarity_opinion: "Solidarność Frankofońska"
  FRA_supported_nepad_development_opinion: "Wspierany rozwój NEPAD"
- FRA_idea_communist_revolution1: "Fires of Revolution"
- FRA_idea_communist_revolution1_desc: "The fires of revolution burn ever brighter as the wheels of time continue to change. We must seek to stoke these flames by pursuing the revolution here at home and abroad."
- FRA_idea_communist_revolution2: "Great Fires of Revolution"
- FRA_idea_communist_revolution2_desc: "The revolution is about to sweep the world for the future of mankind."
+ FRA_idea_communist_revolution1: "Ognie rewolucji"
+ FRA_idea_communist_revolution1_desc: "Ognie rewolucji płoną coraz jaśniej, gdy koła czasu wciąż się zmieniają. Musimy starać się podsycić ten ogień, kontynuując rewolucję w kraju i za granicą."
+ FRA_idea_communist_revolution2: "Wielkie pożary rewolucji"
+ FRA_idea_communist_revolution2_desc: "Rewolucja wkrótce zmiecie świat w imię przyszłości ludzkości."
