--- a/localisation/polish/MD_focus_GEO_l_polish.yml
+++ b/localisation/polish/MD_focus_GEO_l_polish.yml
@@ -33,7 +33,7 @@
  GEO_osset_abkhaz_priznat: "Uznajcie Abchazję i Osetię"
  GEO_osset_abkhaz_priznat_desc: "Nadszedł czas uznania Osetii Południowej i Abchazji za odrębne i niepodległe państwa, co zapewni pokój w Gruzji i całym regionie."
  GEO_diplomatic_requests_fromrussia: "Żądania dyplomatyczne z Rosji"
- GEO_diplomatic_requests_fromrussia_desc: "daj, daj"
+ GEO_diplomatic_requests_fromrussia_desc: "daj, daj, daj"
  GEO_join_nato_geo: "Dołącz do NATO"
  GEO_join_nato_geo_desc: "Zachód nas pożre"
  GEO_bezhenci_help_of_uf: "Pomóż uchodźcom"
