--- a/localisation/polish/MD_focus_GER_l_polish.yml
+++ b/localisation/polish/MD_focus_GER_l_polish.yml
@@ -2618,3 +2618,5 @@
  GER_strengthen_the_service_sector_desc: "Aby w pełni zmodernizować naszą gospodarkę, musimy wzmocnić sektor usług."
  GER_european_business_opportunities: "Europejskie możliwości biznesowe"
  GER_european_business_opportunities_desc: "Otwierając naszą gospodarkę na resztę Europy, będziemy mogli w pełni wykorzystać inwestycje i możliwości, jakie daje nowa pula inwestycyjna."
+ GER_international_business: "Biznes międzynarodowy"
+ GER_international_business_desc: "Niemcy często nazywają siebie „Exportweltmeister”, „mistrzem świata w eksporcie”. Niemiecka gospodarka tradycyjnie odnotowuje znaczne nadwyżki handlowe, sprzedając innym krajom uprzemysłowionym znacznie więcej, niż same Niemcy od nich kupują. Kontynuacja polityki przyjaznej eksportowi wymaga dużej dozy zagranicznego pragmatyzmu politycznego – w końcu pieniądze dyktatora są tak samo dobre, jak pieniądze popularnego przywódcy."
