--- a/localisation/polish/MD_focus_LBA_l_polish.yml
+++ b/localisation/polish/MD_focus_LBA_l_polish.yml
@@ -1115,7 +1115,7 @@
  LBA_send_mercenaries_tt_1: "Jeśli ukończyliśmy fokus §Y$LBA_support_darfur$§!:\n"
  LBA_send_mercenaries_tt_2: "Jeśli ukończyliśmy fokus §Y$LBA_support_sudan$§!:\n"
  LBA_gaddafis_dream: "Sen Kaddafiego"
- LBA_gaddafis_dream_desc: "Po dojściu do władzy Muammar Kaddafi chciał utworzyć Zjednoczone Państwa Arabskie, a nawet poczynił pewne postępy w zakresie tymczasowych unii z Tunezją i Egiptem. Jednakże po złej krwi z przywódcami arabskimi i śmierci arabskiego nacjonalizmu wydaje się, że to marzenie legło w gruzach. Są jednak inne ścieżki, którymi Kaddafi może pójść..."
+ LBA_gaddafis_dream_desc: "Po dojściu do władzy Muammar Kaddafi chciał utworzyć Zjednoczone Stany Arabskie, a nawet poczynił pewne postępy w zakresie tymczasowych unii z Tunezją i Egiptem. Jednakże po złej krwi z przywódcami arabskimi i śmierci arabskiego nacjonalizmu wydaje się, że to marzenie legło w gruzach. Są jednak inne ścieżki, którymi Kaddafi może pójść..."
  LBA_approach_algeria: "Dojazd do Algierii"
  LBA_approach_algeria_desc: "Algieria jest wieloletnim partnerem w regionie. Żadne z nas tak naprawdę nie przepada za Zachodem, wspólnie walczyliśmy z islamistami i obaj jesteśmy gorącymi zwolennikami niepodległości Sahrawi od Maroka. Ważne jest, abyśmy pozostali w dobrych stosunkach z Algierią."
  LBA_approach_egypt: "Podejdź do Egiptu"
@@ -1870,7 +1870,7 @@
  LibyaTribes.3.b: "To nie nasza rola, żeby interweniować"
  LibyaTribes.4.t: "Student Uniwersytetu publikuje pracę dyplomową"
  LibyaTribes.4.d: "Student [tribal_offender] z libijskiego uniwersytetu opublikował nową pracę magisterską na temat nowej technologii. Teza ta może pomóc w rozwoju naszego sektora przemysłowego. Ujawnia jednak również pewną krytykę pod adresem rządzącego rządu i tego, jak inne plemiona powstrzymują Libię. Czy tę tezę należy stłumić, czy też pozostawić?"
- LibyaTribes.4.a: "To dobra wiadomość"
+ LibyaTribes.4.a: "Ta teza to dobra wiadomość"
  LibyaTribes.4.b: "Pomiń publikację"
  LibyaTribes.5.t: "Ekonomista oferuje rozwiązanie"
  LibyaTribes.5.d: "Ekonomista z plemienia [tribal_offender] stwierdził niedawno w swojej publikacji, że produktywność gospodarczą Libii można poprawić poprzez obniżenie niektórych podatków. Przez przypadek te ulgi podatkowe wpłynęłyby głównie na sektory gospodarki ważne dla plemion [tribal_offender]. Jest prawdą w tym, co mówi ekonomista, ale wprowadzenie ulg podatkowych wyraźnie sugerowałoby, że faworyzujemy plemiona [tribal_offender] nad innymi."
