--- a/localisation/polish/MD_focus_RAJ_l_polish.yml
+++ b/localisation/polish/MD_focus_RAJ_l_polish.yml
@@ -807,7 +807,7 @@
  RAJ_arjun: "Czołg podstawowy ARJUN"
  RAJ_arjun_desc: "Arjun to główny czołg bojowy opracowany przez największego indyjskiego wykonawcę w dziedzinie obronności, Organizację Badań i Rozwoju Obrony (DRDO), dla armii indyjskiej. Czołg nosi imię Arjuna, jednego z głównych bohaterów indyjskiego poematu epickiego Mahabharata."
  RAJ_t90_rus: "Rosyjski T90"
- RAJ_t90_rus_desc: "Rosyjski czołg podstawowy T-90 został przyjęty do służby w 1992 roku pod nazwą T-90. W 1999 roku czołg otrzymał słowną nazwę „Władimir”."
+ RAJ_t90_rus_desc: "Rosyjski czołg podstawowy T-90 został przyjęty do służby w 1992 roku pod nazwą T-90. W 1999 roku czołg otrzymał słowną nazwę „Vladimir”"
  RAJ_british_challenger: "Brytyjski Challenger"
  RAJ_british_challenger_desc: "Podstawowy czołg bojowy wyprodukowany przez brytyjską firmę Vickers Defence Systems (obecnie część BAE Systems). Jest to trzeci czołg noszący nazwę Challenger. Choć Challenger 2 został opracowany na bazie Challengera, nowy czołg różni się od wcześniejszego modelu nowym wyposażeniem i podzespołami: tylko 5% części jest wspólnych dla obu modeli. Challenger 2 zastąpił teraz wcześniejszy model będący na wyposażeniu armii brytyjskiej."
  RAJ_bmp_sarath: "BMP Sarat"
