--- a/localisation/russian/MD_focus_EU_l_russian.yml
+++ b/localisation/russian/MD_focus_EU_l_russian.yml
@@ -327,10 +327,10 @@
  PG_Monarchist: "[EU_parliament_PG_Monarchist_icon] [EU_parliament_PG_Monarchist_short_name]"
  office_occupied_tt: "Office is not currently occupied by another EU Member"
  EU_total_member_vote_tt: "Всего §CГосударств-членов§! Необходимый: [?global.EU_active_vote_yes]/[?global.EU_majority_qmv_state]"
- EU_total_member_vote_desc_tt: "§C[EUU.GetNameWithFlag]'s§! primary voting system is Qualified Majority Voting (QMV). QMV requires that [?global.EU_majority_qmv_state] §CMember States§! (or 55% of the current §CMember State§! total) support the current resolution. Once we have more than [?global.EU_majority_qmv_state] §CMember States§! the law can be passed assuming we have the required population majority of 65%.\n\nPop % of §CEU§! §GSupporting§!: [?global.var_EUpopRatioYes|%+]\nPop % of §CEU§! §RRejecting§!: [?global.var_EUpopRatioNo|%-]"
- EU_sup_vote_tt: "Pop % of §CEU§! §GSupporting§!: [?global.var_EUpopRatioYes|%+]"
- EU_sup_vote_desc_tt: "§C[EUU.GetNameWithFlag]'s§! primary voting system is Qualified Majority Voting (QMV). QMV requires that 65% of §C[EUU.GetNameWithFlag]'s§! §YPopulation§! support the Council resolution."
- rej_vote_tt: "Pop % of §CEU§! §RRejecting§!: [?global.var_EUpopRatioNo|%-]"
+ EU_total_member_vote_desc_tt: "§C[EUU.GetNameWithFlag]§! Основная система голосования – голосование квалифицированным большинством (QMV). QMV требует, чтобы [?global.EU_majority_qmv_state] §Cгосударства-члены§! (или 55% нынешнего §Cгосударства-члена§! общий) поддерживают текущую резолюцию. Как только у нас будет больше, чем [?global.EU_majority_qmv_state] §Cгосударств-членов§! закон может быть принят при условии, что у нас будет необходимое большинство населения в 65%.\n\nPop % из §CЕвросоюз§! §GПоддержка§!: [?global.var_EUpopRatioYes|%+]\nPop % из §CЕвросоюз§! §RОтвергая§!: [?global.var_EUpopRatioNo|%-]"
+ EU_sup_vote_tt: "Pop % из §CЕвросоюз§! §GПоддержка§!: [?global.var_EUpopRatioYes|%+]"
+ EU_sup_vote_desc_tt: "§C[EUU.GetNameWithFlag]§! Основная система голосования – голосование квалифицированным большинством (QMV). QMV требует, чтобы 65% §C[EUU.GetNameWithFlag]§! §YНаселение§! поддержать резолюцию Совета."
+ rej_vote_tt: "Pop % из §CЕвросоюз§! §RОтвергая§!: [?global.var_EUpopRatioNo|%-]"
  EU_parliament_is_in_session_tt: "The European Parliament is currently considering an agenda item"
  par_vote_wait: "Waiting for the next parliament session to start. §Y[?delay_next_parliament_vote:days_left|0Y] days remaining§!"
  con_vote_wait: "Waiting for the next council voting session to start. §Y[?delay_player_next_council_vote:days_left|0Y] days remaining§!"
@@ -611,9 +611,9 @@
  euroscepticism_country_button_click_cooldown: "Недавно провел кампанию евроскептиков. (Осталось дней: [?euroscepticism_country_button_click_cooldown:days_left|Y0])"
  soteu_country_header: "Страна"
  debt_header: "§YДолг§!"
- ecb_omt_debt_list_tt: "[THIS.GetNameWithFlag] currently has $[?THIS.debt|Y] in Debt. They are currently paying $[?THIS.debt_rate|R] weekly."
+ ecb_omt_debt_list_tt: "[THIS.GetNameWithFlag] в настоящее время имеет долг $[?THIS.debt|Y]. В настоящее время они платят $[?THIS.debt_rate|R] еженедельно."
  omt_account_header: "§COMT\nAccount§!"
- ecb_omt_account_amount_tt: "[THIS.GetNameWithFlag] currently has $[?THIS.OMT_account|C] in their OMT account."
+ ecb_omt_account_amount_tt: "[THIS.GetNameWithFlag] в настоящее время имеет $[?THIS.OMT_account|C] в своей учетной записи OMT."
  interest_rate_header: "§RПроцентная ставка§!"
  population_country_header: "§YНаселение§!"
  ratio_of_total_eu_header: "§C% \nЕС§!"
@@ -3120,11 +3120,11 @@
  EU_sec_general_euro_army_unlocks_tt: "§YЕвроармия§! Создан пост §YГенерального секретаря Евроармии§!"
  EU_sec_general_euro_navy_unlocks_tt: "§YЕвроВМС§! Создана должность §Yгенерального секретаря Евровоенно-морского флота§!"
  EU_ambassador_to_un_unlocks_tt: "§YПостоянный член СБ ООН§! Учреждена должность §YПосла Союза при Организации Объединенных Наций§!"
- HLS_EU_contribution: "[HLS.GetNameWithFlag] - [?HLS.EU_budget_contribution|§Y0] billion - [?HLS.EU_budget_call_rate|§C2]§C%§! - [?HLS.EU_budget_ratio|§g%2]\n"
- SMA_EU_contribution: "[SMA.GetNameWithFlag] - [?SMA.EU_budget_contribution|§Y0] billion - [?SMA.EU_budget_call_rate|§C2]§C%§! - [?SMA.EU_budget_ratio|§g%2]\n"
- MNC_EU_contribution: "[MNC.GetNameWithFlag] - [?MNC.EU_budget_contribution|§Y0] billion - [?MNC.EU_budget_call_rate|§C2]§C%§! - [?MNC.EU_budget_ratio|§g%2]\n"
- ADO_EU_contribution: "[ADO.GetNameWithFlag] - [?ADO.EU_budget_contribution|§Y0] billion - [?ADO.EU_budget_call_rate|§C2]§C%§! - [?ADO.EU_budget_ratio|§g%2]\n"
- LIC_EU_contribution: "[LIC.GetNameWithFlag] - [?LIC.EU_budget_contribution|§Y0] billion - [?LIC.EU_budget_call_rate|§C2]§C%§! - [?LIC.EU_budget_ratio|§g%2]\n"
+ HLS_EU_contribution: "[HLS.GetNameWithFlag] - [?HLS.EU_budget_contribution|§Y0] миллиард - [?HLS.EU_budget_call_rate|§C2]§C%§! - [?HLS.EU_budget_ratio|§g%2]\n"
+ SMA_EU_contribution: "[SMA.GetNameWithFlag] - [?SMA.EU_budget_contribution|§Y0] миллиардов - [?SMA.EU_budget_call_rate|§C2]§C%§! - [?SMA.EU_budget_ratio|§g%2]\n"
+ MNC_EU_contribution: "[MNC.GetNameWithFlag] - [?MNC.EU_budget_contribution|§Y0] миллиардов - [?MNC.EU_budget_call_rate|§C2]§C%§! - [?MNC.EU_budget_ratio|§g%2]\n"
+ ADO_EU_contribution: "[ADO.GetNameWithFlag] - [?ADO.EU_budget_contribution|§Y0] миллиард - [?ADO.EU_budget_call_rate|§C2]§C%§! - [?ADO.EU_budget_ratio|§g%2]\n"
+ LIC_EU_contribution: "[LIC.GetNameWithFlag] - [?LIC.EU_budget_contribution|§Y0] миллиардов - [?LIC.EU_budget_call_rate|§C2]§C%§! - [?LIC.EU_budget_ratio|§g%2]\n"
  HLS_EU_distribution: "[HLS.GetNameWithFlag] - [?HLS.EU_budget_total_gain|§Y2] - [?HLS.EU_budget_ratio_gain|§C%2] - [?HLS.EU_growth_subsidies|§O2] - [?HLS.EU_natural_subsidies|§G2] - [?HLS.EU_global_exp_subsidies|§L2] - [?HLS.EU_admin_subsidies|§g2] - [?HLS.EU_budget_net|§+2]\n"
  SMA_EU_distribution: "[SMA.GetNameWithFlag] - [?SMA.EU_budget_total_gain|§Y2] - [?SMA.EU_budget_ratio_gain|§C%2] - [?SMA.EU_growth_subsidies|§O2] - [?SMA.EU_natural_subsidies|§G2] - [?SMA.EU_global_exp_subsidies|§L2] - [?SMA.EU_admin_subsidies|§g2] - [?SMA.EU_budget_net|§+2]\n"
  MNC_EU_distribution: "[MNC.GetNameWithFlag] - [?MNC.EU_budget_total_gain|§Y2] - [?MNC.EU_budget_ratio_gain|§C%2] - [?MNC.EU_growth_subsidies|§O2] - [?MNC.EU_natural_subsidies|§G2] - [?MNC.EU_global_exp_subsidies|§L2] - [?MNC.EU_admin_subsidies|§g2] - [?MNC.EU_budget_net|§+2]\n"
@@ -3291,7 +3291,7 @@
  MNC_Monarchist_loc_key: "[MNC.Monarchist_L_icon] ([MNC.GetFlag] [?MNC.MEP_Monarchist]) "
  ADO_Monarchist_loc_key: "[ADO.Monarchist_L_icon] ([ADO.GetFlag] [?ADO.MEP_Monarchist]) "
  LIC_Monarchist_loc_key: "[LIC.Monarchist_L_icon] ([LIC.GetFlag] [?LIC.MEP_Monarchist]) "
- VOJ_EU_contribution: "[VOJ.GetNameWithFlag] - [?VOJ.EU_budget_contribution|§Y0] billion - [?VOJ.EU_budget_call_rate|§C2]§C%§! - [?VOJ.EU_budget_ratio|§g%2]\n"
+ VOJ_EU_contribution: "[VOJ.GetNameWithFlag] - [?VOJ.EU_budget_contribution|§Y0] миллиардов - [?VOJ.EU_budget_call_rate|§C2]§C%§! - [?VOJ.EU_budget_ratio|§g%2]\n"
  VOJ_EU_distribution: "[VOJ.GetNameWithFlag] - [?VOJ.EU_budget_total_gain|§Y2] - [?VOJ.EU_budget_ratio_gain|§C%2] - [?VOJ.EU_growth_subsidies|§O2] - [?VOJ.EU_natural_subsidies|§G2] - [?VOJ.EU_global_exp_subsidies|§L2] - [?VOJ.EU_admin_subsidies|§g2] - [?VOJ.EU_budget_net|§+2]\n"
  VOJ_Article_50_YES: "§Y[VOJ.GetNameWithFlag]§!\n"
  EU_council_VOJ_loc_key: "[VOJ.GetNameWithFlag] "
