--- a/localisation/russian/MD_focus_GEO_l_russian.yml
+++ b/localisation/russian/MD_focus_GEO_l_russian.yml
@@ -33,7 +33,7 @@
  GEO_osset_abkhaz_priznat: "Признать Абхазию и Осетию"
  GEO_osset_abkhaz_priznat_desc: "Пришло время признать Южную Осетию и Абхазию отдельными и независимыми государствами как средство обеспечения мира в Грузии и во всем регионе."
  GEO_diplomatic_requests_fromrussia: "Дипломатические запросы из России"
- GEO_diplomatic_requests_fromrussia_desc: "Дайте мне, дайте мне!"
+ GEO_diplomatic_requests_fromrussia_desc: "дай мне, дай мне, дай мне"
  GEO_join_nato_geo: "Вступить в НАТО"
  GEO_join_nato_geo_desc: "Запад нас сожрет"
  GEO_bezhenci_help_of_uf: "Помочь беженцам"
