--- a/localisation/russian/MD_focus_GER_l_russian.yml
+++ b/localisation/russian/MD_focus_GER_l_russian.yml
@@ -2232,11 +2232,11 @@
  GER_how_to_overthrow_TT: "§RIn order to overthrow the§! §CRepublic§!§R, we must first defund either the§! §YLeft-Wing§!§R or the§! §YRight-Wing§! §Rdepartments of the§! §YBfV§! by setting funding to §H\"Very Low\"§!§R, and wait for either of the departments to collapse!§!"
  66_percent_government_coalition_strength_TT: "Current §YGovernment Popularity§! > §Y66%§! (Current: [?government_coalition_strength|%1])"
  GER_skip_last_payment_TT: "[ROOT.GetNameWithFlag] §Ywill§! §RNot§! §Ymake the final war reparations payment and§! §RCease§! §Yto make any future payments!§! "
- GER_satisfaction_level_very_high: "§GExcellent§!"
+ GER_satisfaction_level_very_high: "§GПревосходно§!"
  GER_satisfaction_level_high: "§GХорошо§!"
- GER_satisfaction_level_medium: "§YModerate§!"
- GER_satisfaction_level_low: "§RBad§!"
- GER_satisfaction_level_very_low: "§RNon-existing§!"
+ GER_satisfaction_level_medium: "§YУмеренный§!"
+ GER_satisfaction_level_low: "§RПлохо§!"
+ GER_satisfaction_level_very_low: "§RНесуществующий§!"
  GER_satisfaction_level_rise_tt: "The satisfaction level of our coalition partner §Gincreases§! by a §Ysmall§! amount."
  GER_satisfaction_level_rise_much_tt: "The satisfaction level of our coalition partner §Gincreases§! by a §Ybig§! amount."
  GER_satisfaction_level_fall_tt: "The satisfaction level of our coalition partner §Rdecreases§! by a §Ysmall§! amount."
@@ -2245,8 +2245,8 @@
  GER_join_allied_force1_tt: "We will join the §BNATO§! led operation called §Y'Essential Harvest'§!"
  GER_vetrauensfrage_tt: "The result is dependent on the satisfaction level of our coalition partner!\n§YIf it fails new options will appear.§!"
  GER_reduce_youth_unemployment_tt: "This will §Greduce§! our §Ryouth unemployment§! rate and help our §Yeconomy§!."
- scripted_gui_open_tt_ger_gov: "Open the politics tab of the German parliament, the Bundestag, to interact with it."
- GER_sussmuth_komission_tt: "§YThe Süssmuth Commission starts to work out a paper§!"
+ scripted_gui_open_tt_ger_gov: "Откройте вкладку политики немецкого парламента, Бундестага, чтобы взаимодействовать с ним."
+ GER_sussmuth_komission_tt: "§YКомиссия Зюссмута приступает к разработке документа§!"
  GER_mannesmann_exists_lk: "the Mannesmann AG"
  GER_mannesmann_exists_not_lk: "Vodafone"
  GER_reshuffle_generals_tt: "German generals who reached their pension age will be §Rremoved§! and make way for the next generation of §Bcommanders§! for the §GBundeswehr§!."
@@ -2267,7 +2267,7 @@
  tooltip_medium_military_GER: "Устанавливает ваши военные расходы на средние, если они ниже этого значения."
  tooltip_cdu_green_strenghten_GER: "Усиливает СДПГ и зеленых в борьбе с их политическими соперниками."
  tooltip_keep_sdu_GER: "Удерживает у власти социал-демократическую СДПГ."
- tooltip_10_pp_eu_GER: "Grants 10 Political Power for each other EU member state."
+ tooltip_10_pp_eu_GER: "Предоставляет 10 политической власти каждому другому государству-члену ЕС."
  tooltip_industry_focus_GER: "Готовит отраслевую политику с потенциальным международным нейтралитетом."
  tooltip_SOV_GER: "Подготавливает внешнеполитический фокус с потенциалом международного нейтралитета или сближения с Российской Федерацией."
  GER_Anker_army_TT: "Этот фокус откроет решения, связанные с §Yармией Анкера§!"
@@ -2285,9 +2285,9 @@
  GER_evidence_found_fuchs: "Письмо Колю"
  GER_evidence_found_khs: "K.S. Calendars"
  GER_evidence_result_loc: "Сила доказательств: [GET_GER_evidence_strenght]"
- GER_evidence_strenght_strong: "§GStrong§!"
- GER_evidence_strenght_medium: "§YMedium§!"
- GER_evidence_strenght_weak: "§RWeak§!"
+ GER_evidence_strenght_strong: "§GСильный§!"
+ GER_evidence_strenght_medium: "§YСередина§!"
+ GER_evidence_strenght_weak: "§RСлабый§!"
  GER_MISSION_BOSNIA: "SFOR"
  GER_mission_is_bosnia: "File: Stabilisation Force (SFOR)"
  POLITICS_GERHARD_SCHRODER_DESC: "Отец Герхарда Шредера умер, не успев увидеть своего сына, в Румынии. Не имея партнера, его мать сбежала с ним в Липпе на западе Германии и жила там при социальной помощи нового правительства.\n\nВ ранние годы он изучал юриспруденцию и работал юристом.\n\nЕго политическая карьера началась в 1963 году, когда он присоединился к СДПГ. Затем он продвигался вверх до 1978 года, он стал новым председателем молодежной организации СДПГ, но только до 1980 года. В 1986 году он одержал свою первую крупную победу, став избранным президентом графства Нижняя Саксония. В 1990 году он был переизбран еще 2 раза. до 1998 года. В этом году он был избран канцлером Федеративной Республики Германия и по сей день правит ею вместе с коалицией с зелеными."
@@ -2614,7 +2614,9 @@
  bavaria.1.b: "Ни в коем случае!"
  GER_agenda_2010: "Агенда 2010"
  GER_agenda_2010_desc: "Герхард Шредер всегда был умеренным среди социал-демократов и поэтому выступал за ограничение бюджета. «Повестка дня на 2010 год» — это амбициозный проект сокращения бюджета и бюрократических реформ, который, без сомнения, вызовет резкую критику со стороны левых групп и подтолкнет правительство к центру, но он может оказаться фантастическим для экономического прогресса."
- GER_strengthen_the_service_sector: "Strengthen the Service Sector"
- GER_strengthen_the_service_sector_desc: "We must strengthen the service sector in order to fully modernize our economy."
- GER_european_business_opportunities: "European Business Opportunities"
- GER_european_business_opportunities_desc: "By opening our economy to the rest of Europe, we will be able to fully utilize investments and opportunities provided by the new investment pool."
+ GER_strengthen_the_service_sector: "Укрепление сектора услуг"
+ GER_strengthen_the_service_sector_desc: "Мы должны укрепить сектор услуг, чтобы полностью модернизировать нашу экономику."
+ GER_european_business_opportunities: "Европейские возможности для бизнеса"
+ GER_european_business_opportunities_desc: "Открыв нашу экономику для остальной Европы, мы сможем в полной мере использовать инвестиции и возможности, предоставляемые новым инвестиционным пулом."
+ GER_international_business: "Международный бизнес"
+ GER_international_business_desc: "Германия часто называет себя «Exportweltmeister», «чемпионом мира по экспорту». Немецкая экономика традиционно имела значительный торговый профицит, продавая другим промышленно развитым странам гораздо больше, чем сама Германия покупает у них. Продолжение политики, ориентированной на экспорт, требует большого внешнеполитического прагматизма – в конце концов, деньги диктатора так же хороши, как и деньги популярного лидера."
