--- a/localisation/russian/MD_focus_LBA_l_russian.yml
+++ b/localisation/russian/MD_focus_LBA_l_russian.yml
@@ -1115,7 +1115,7 @@
  LBA_send_mercenaries_tt_1: "Если мы завершили фокус §Y$LBA_support_darfur$§!:\n"
  LBA_send_mercenaries_tt_2: "Если мы завершили фокус §Y$LBA_support_sudan$§!:\n"
  LBA_gaddafis_dream: "Мечта Каддафи"
- LBA_gaddafis_dream_desc: "Придя к власти, Муаммар Каддафи хотел создать объединенное арабское государство и даже добился некоторого прогресса, заключив временные союзы с Тунисом и Египтом. Однако после разлада с арабскими лидерами и гибели арабского национализма эта мечта, похоже, рухнула. Однако у Каддафи есть и другие пути..."
+ LBA_gaddafis_dream_desc: "Придя к власти, Муаммар Каддафи захотел создать Объединенные арабские государства и даже добился определенного прогресса во временных союзах с Тунисом и Египтом. Однако после вражды с арабскими лидерами и смерти арабского национализма эта мечта, похоже, рухнула. Однако есть и другие пути, по которым Каддафи мог бы пойти..."
  LBA_approach_algeria: "Сблизиться с Алжиром"
  LBA_approach_algeria_desc: "Алжир - давний партнер в регионе. Мы оба не очень любим Запад, вместе боролись с исламистами и оба являемся убежденными сторонниками независимости сахарской провинции от Марокко. Очень важно, чтобы мы оставались в хороших отношениях с Алжиром."
  LBA_approach_egypt: "Сблизиться с Египтом"
@@ -2267,7 +2267,7 @@
  LBA_gmmr_jaghbub_desc: "На востоке страны, прямо на границе с Египтом, к югу от Тобрука, находится небольшой городок Джагбуб. Эта местность представляет собой природный оазис, расположенный на вершине водоносного слоя. Построив здесь колодец, мы сможем обеспечить Тобрук пресной водой."
  aozou_strip_occupation_decisions: "Оккупация полосы Аузу"
  aozou_strip_occupation_decisions_desc: "Поскольку полоса Аузу является спорным регионом между нами и нашим соседом, хаос, который там происходит, может позволить нам взять регион под контроль."
- generic_occupy_aouzou_strip: "Оккупировать полосу Аузу"
+ generic_occupy_aouzou_strip: "Оккупируйте полосу Аузу"
  generic_occupy_aouzou_strip_desc: "[580.owner.GetNameDef] в настоящее время не может эффективно расширить контроль над [580.GetName]. Мы должны отправить небольшой контингент войск для охраны территории. Маловероятно, что [580.owner.GetName] окажет сопротивление."
  generic_occupy_aouzou_strip_tt: "§R[580.owner.GetNameDef] может объявить нам войну!§!"
  LibyaFocus.104.t: "[FROM.GetNameDef] оккупирует [580.GetName]"
