--- a/localisation/russian/MD_focus_RAJ_l_russian.yml
+++ b/localisation/russian/MD_focus_RAJ_l_russian.yml
@@ -807,7 +807,7 @@
  RAJ_arjun: "Основной боевой танк ARJUN"
  RAJ_arjun_desc: "Arjun - основной боевой танк, разработанный крупнейшим индийским оборонным подрядчиком, Организацией оборонных исследований и разработок (DRDO), для индийской армии. Танк назван в честь Арджуна, одного из главных героев индийской эпической поэмы Махабхарата."
  RAJ_t90_rus: "Российский Т90"
- RAJ_t90_rus_desc: "Российский основной боевой танк Т-90 был принят на вооружение в 1992 году под названием Т-90. В 1999 году танк получил словесное название Владимир"
+ RAJ_t90_rus_desc: "Российский основной боевой танк Т-90 был принят на вооружение в 1992 году под названием Т-90. В 1999 году танку было присвоено словесное наименование «Владимир»."
  RAJ_british_challenger: "Британский Challenger"
  RAJ_british_challenger_desc: "Основной боевой танк производства британской компании Vickers Defense Systems (ныне входит в состав BAE Systems). Это третий танк, носящий имя Challenger. Несмотря на то, что Challenger 2 был разработан на базе Challenger, новый танк отличается от ранней модели новым оборудованием и компонентами, лишь 5% деталей являются общими для обеих моделей. В настоящее время Challenger 2 заменил раннюю модель на вооружении британской армии."
  RAJ_bmp_sarath: "БМП Sarath"
