--- a/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
@@ -479,7 +479,7 @@
  command_power_more_than_145_blocked: "£command_power §R145§!"
  command_power_more_than_125: "£command_power §H125§!"
  command_power_more_than_125_blocked: "£command_power §R125§!"
- command_power_more_than_100: "§H100§!£command_power"
+ command_power_more_than_100: "£command_power §H100§!"
  command_power_more_than_100_blocked: "£command_power §R100§!"
  command_power_more_than_75: "£command_power §H75§!"
  command_power_more_than_75_blocked: "£command_power §R75§!"
