--- a/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
@@ -2618,3 +2618,5 @@
  GER_strengthen_the_service_sector_desc: "我们必须加强服务业，才能全面实现经济现代化。"
  GER_european_business_opportunities: "欧洲商业机会"
  GER_european_business_opportunities_desc: "通过向欧洲其他国家开放我们的经济，我们将能够充分利用新投资池提供的投资和机会。"
+ GER_international_business: "国际商贸"
+ GER_international_business_desc: "德国经常自诩为“出口世界冠军”。德国经济历来都拥有巨大的贸易顺差，向其他工业国家出售的商品远多于德国从这些国家购买的商品。继续推行出口友好政策需要大量的外交政治务实主义 - 毕竟，独裁者的钱和受欢迎的领导人的钱一样好。"
