--- a/localisation/simp_chinese/MD_focus_LBA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_LBA_l_simp_chinese.yml
@@ -1115,7 +1115,7 @@
  LBA_send_mercenaries_tt_1: "如果我们完成§Y$LBA_support_darfur$§!国策：\n"
  LBA_send_mercenaries_tt_2: "如果我们完成§Y$LBA_support_sudan$§!国策：\n"
  LBA_gaddafis_dream: "卡扎菲之梦"
- LBA_gaddafis_dream_desc: "穆阿迈尔·卡扎菲上台后，就想建立阿拉伯联合国家，甚至与突尼斯和埃及建立了临时联盟，并取得了一些进展。然而，在与阿拉伯领导人产生一些不和，以及阿拉伯民族主义消亡之后，这个梦想似乎破灭了。然而，卡扎菲还有其他选择……"
+ LBA_gaddafis_dream_desc: "穆阿迈尔·卡扎菲上台后，就想建立统一的阿拉伯国家，甚至与突尼斯和埃及建立了临时联盟，并取得了一些进展。然而，在与阿拉伯领导人产生一些不和，以及阿拉伯民族主义消亡之后，这个梦想似乎破灭了。然而，卡扎菲还有其他选择……"
  LBA_approach_algeria: "接近阿尔及利亚"
  LBA_approach_algeria_desc: "阿尔及利亚是该地区的长期合作伙伴。我们双方都不太喜欢西方，我们曾一起与伊斯兰主义者斗争，我们都是撒哈拉人脱离摩洛哥独立的坚定支持者。与阿尔及利亚保持良好关系非常重要。"
  LBA_approach_egypt: "解决埃及"
