--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -7503,7 +7503,7 @@
  JAP.Western_Autocracy_desc: "修正主义者是自民党的右翼，提出更具对抗性的外交政策，他们建议根据全球形势以及地区形势调整宪法第九条，因为中国和朝鲜对日本和朝鲜构成了真正的威胁。我们不能仅仅依靠美国来提供保护，我们需要自己解决问题并建立足够的军事能力，以保护我们的利益。如果不改变我们的政策，我们将失去目前在世界上的地位。"
  JAP.Conservative: "£JAP_conservatism 自由民主党‘志帅会’"
  JAP.Conservative_icon: "£JAP_conservatism"
- JAP.Conservative_desc: "保护主义者是自民党的左翼，支持更加以经济为基础的外交政策，他们将中国的崛起视为机遇，并希望从中获得经济利益，即使这意味着他们需要对美国施加限制。如果我们不与中国合作，我们的经济就会失败，上几代人的辛勤努力就会白费。尽管保护主义派是和平主义者，但他们愿意重新解释宪法第九条并承认自卫队。"
+ JAP.Conservative_desc: "保护主义者是自民党的左翼，他们支持更加以经济为基础的外交政策。他们将中国的崛起视为机遇，并希望从中获得经济利益。即使这意味着他们需要对美国施加限制。如果我们不与中国合作，我们的经济就会失败，上几代人的辛勤工作就会付诸东流！尽管保护主义派是和平主义者，但他们愿意重新解释宪法第9条并承认自卫队。"
  JAP.Autocracy: "£JAP_Autocracy 革命共产主义者同盟"
  JAP.Autocracy_icon: "JAP_Autocracy"
  JAP.Autocracy_desc: "革命共产主义联盟是1957年日本共产党极端分子分裂的结果。该党是一个马克思主义政党，反对帝国主义和斯大林主义等任何极端形式的“共产主义”。该党在20世纪60年代中期至1970年代最为活跃。激进分子发起了多次针对越南战争和美国的抗议和小规模骚乱，在这段时间里，该组织对政府发动了至少十几次袭击，当千叶县开发委员会主席被暗杀后，他们的恐怖活动达到了顶峰。越南战争结束后，该党失去了大部分支持，尽管他们一直活跃并组织了许多抗议活动，但他们在新千年几乎没有影响力，但在下一次全国性危机中可能会出现机会，也可能不会出现。"
