--- a/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
@@ -33,7 +33,7 @@
  GEO_osset_abkhaz_priznat: "Reconhecer Abkházia e Ossétia"
  GEO_osset_abkhaz_priznat_desc: "Chegou a hora de reconhecer a Ossétia do Sul e a Abkházia como estados separados e independentes como meio de assegurar a paz na Geórgia e na região como um todo."
  GEO_diplomatic_requests_fromrussia: "Pedidos diplomáticos da Rússia"
- GEO_diplomatic_requests_fromrussia_desc: "Pedidos diplomáticos da Rússia: A Geórgia recebeu pedidos diplomáticos da Rússia, iniciando um diálogo que busca abordar questões de interesse mútuo. Estes pedidos refletem a busca por canais diplomáticos para promover a compreensão e as relações construtivas entre os dois países."
+ GEO_diplomatic_requests_fromrussia_desc: "me dê, me dê, me dê"
  GEO_join_nato_geo: "Juntar-se à OTAN"
  GEO_join_nato_geo_desc: "Juntar-se à OTAN: A Geórgia formalizou sua intenção de se juntar à OTAN, buscando uma aliança estratégica para fortalecer a segurança e promover a cooperação militar. Este passo representa o comprometimento do país com os valores e objetivos compartilhados pela OTAN e seus membros."
  GEO_bezhenci_help_of_uf: "Ajudar refugiados"
