--- a/localisation/braz_por/equipment_l_braz_por.yml
+++ b/localisation/braz_por/equipment_l_braz_por.yml
@@ -755,7 +755,7 @@
  BLR_artillery_3_desc: "Um obuseiro rebocado com base em um canhão de 152 mm montado em uma plataforma de artilharia autopropulsada \"Koalitsiya-SV\"."
  BLR_artillery_4: "D-50"
  BLR_util_vehicle_0: "GAZ-66"
- BLR_util_vehicle_0_desc: "A logistics truck and troop carrier used by many militaries around the world."
+ BLR_util_vehicle_0_desc: "Um caminhão de logístico e transportador de tropas usado por muitos militares em todo o mundo."
  BLR_util_vehicle_1: "UAZ-469"
  BLR_util_vehicle_1_desc: "Um veículo off-road de carga e passageiros. Utilizado para transportar VIPs em um chassi blindado. Pode ser equipado com um canhão. Capaz de transportar até 7 passageiros e 100 kg de bagagem ou 2 passageiros e 600 kg. O veículo pode rebocar um trailer com peso de até 850 kg."
  BLR_util_vehicle_2: "Kaiman"
@@ -852,7 +852,7 @@
  BLR_transport_plane4: "Il-276"
  BLR_transport_plane4_short: "Il-276"
  BLR_attack_helicopter1: "Mil Mi-24A Hind"
- BLR_attack_helicopter1_short: "Mi-24A Hind"
+ BLR_attack_helicopter1_short: "Mil Mi-24A Hind"
  BLR_attack_helicopter2: "Mil Mi-24B Super Hind"
  BLR_attack_helicopter2_short: "Mi-24B Super Hind"
  BLR_attack_helicopter3: "Mil Mi-28 Havoc"
@@ -933,17 +933,17 @@
  CAN_infantry_weapons:0 "C1A1"
  CAN_infantry_weapons_0_desc: "O rifle de carregamento automático L1A1, também conhecido como SLR (rifle de carregamento automático), ou pela designação do Exército canadense C1A1, é uma versão britânica do rifle de batalha FN FAL produzido pelo fabricante de armamentos belga FN Herstal. O C1A1 foi produzido sob licença no Canadá a partir de 1954."
  CAN_infantry_weapons1:0 "C1A2"
- CAN_infantry_weapons_1_desc: "The C1A2 was a major modification by Canadian Arsenals Limited to the C1A1. It involved several items with the purpose of increasing the reliability and field repairability of the rifles."
+ CAN_infantry_weapons_1_desc: "O C1A2 foi uma grande modificação feita pela Canadian Arsenals Limited para o C1A1. Envolveu vários itens com o propósito de aumentar a confiabilidade e a reparabilidade em campo dos rifles."
  CAN_infantry_weapons2:0 "C7"
  CAN_infantry_weapons3:0 "C7A1"
- CAN_infantry_weapons_3_desc: "The C7A1 replaces the iron sight/carrying handle assembly used on the C7 with a modified Weaver rail for mounting optics. The mount can use traditional iron sights or the ELCAN C79 Optical Sight 3.4×28 optical sight."
+ CAN_infantry_weapons_3_desc: "O C7A1 substitui o conjunto de mira de ferro/alça de transporte usado no C7 por um trilho Weaver modificado para montagem de ótica. A montagem pode usar miras de ferro tradicionais ou a mira óptica ELCAN C79 Optical Sight 3.4×28."
  CAN_infantry_weapons4:0 "C7A2"
- CAN_infantry_weapons_4_desc: "With Canadian involvement in Afghanistan, Diemaco and the Canadian Forces developed improvements to the C7A1 to better suit the operational situations at hand. The result, the C7A2, has a four-point telescoping stock unit and a three-rail TRIAD that is clamped on the front sight base to allow accessories to be attached. The selector lever, magazine release, and charging handle latch became ambidextrous."
+ CAN_infantry_weapons_4_desc: "Com o envolvimento canadense no Afeganistão, a Diemaco e as Forças Canadenses desenvolveram melhorias no C7A1 para melhor se adequar às situações operacionais em questão. Resultado no C7A2 tendo uma unidade de coronha telescópica de quatro pontos e um TRIAD de três trilhos que é preso na base da mira frontal para permitir que acessórios sejam fixados. A alavanca seletora, a liberação do carregador e a trava da alavanca de carregamento tornaram-se ambidestras."
  CAN_infantry_weapons5:0 "C8A3"
- CAN_infantry_weapons_5_desc: "The C8A3 is an upgraded version of the C8 carbine, which features a cold-hammer forged barrel and flat-top upper receiver as well as all the mid-life upgrades that appeared on the C7A2 such as the green furniture, ambidextrous charging-handle latch, magazine release and selector lever. It also includes the TRIAD I rail."
+ CAN_infantry_weapons_5_desc: "A C8A3 é uma versão atualizada da carabina C8, que apresenta um cano forjado a frio e um receptor superior plano, bem como todas as atualizações de meia-idade que apareceram na C7A2, como suas peças verde, trava de manopla de carregamento ambidestra, liberação do carregador e alavanca seletora. Ela também inclui o trilho TRIAD I."
  CAN_infantry_weapons6:0 "C8A4"
  CAN_infantry_weapons7:0 "CMAR"
- CAN_infantry_weapons_7_desc: "The Canadian Modular Assault Rifle is a further set of upgrades to the C8A4, focusing on variable optics, better ergonomics, and an improved ability to tailor the weapon to the operator."
+ CAN_infantry_weapons_7_desc: "O fuzil de assalto modular canadense é um conjunto adicional de atualizações do C8A4, com foco em óptica variável, melhor ergonomia e uma capacidade aprimorada de adaptar a arma ao operador."
  CAN_APC_2:0 "LAV-I AVGP"
  CAN_APC_2_desc:0 "Em 1974, o exército canadense selecionou o veículo suíço Mowag Piranha 6x6. A produção do veículo foi assumida sob licença pela empresa canadense Diesel Division, uma divisão da General Motors do Canadá."
  CAN_APC_2_short:0 "LAV-I AVGP"
@@ -988,7 +988,7 @@
  CAN_IFV_3:0 "LAV-III Kodiak"
  CAN_IFV_3_short:0 "LAV-III Kodiak"
  CAN_IFV_4:0 "LAV-III Kodiak"
- CAN_IFV_4_desc:0 "An upgraded version of the LAV III with newer turrets and electronics, increased IED protection, and addon armour conducted under the LAV Operational Requirement Integration Task (LORIT)."
+ CAN_IFV_4_desc:0 "Uma versão atualizada do LAV III com torres e eletrônicos mais recentes, proteção adicional contra IED e armadura adicional realizada sob a Tarefa de Integração de Requisitos Operacionais LAV (LORIT)."
  CAN_IFV_4_short:0 "LAV-III LORIT"
  CAN_IFV_5:0 "LAV-6 IFV"
  CAN_IFV_5_desc:0 "O upgrade final do LAV III para os padrões LAV 6.0. Os upgrades aumentaram a proteção, incluindo novas torres, eletrônicos melhores, proteção contra IED aprimorada e armadura adicional, enquanto utiliza uma torre armada com uma metralhadora de 25 mm e uma GPMG coaxial semelhante ao original LAV III."
@@ -1077,7 +1077,7 @@
  CHI_IFV_2: "Type-86A"
  CHI_IFV_2_desc: "O Type 86, também conhecido como WZ501, é uma cópia chinesa do veículo de combate de infantaria BMP-1 russo (IFV). Possui armadura de aço soldado, um canhão de 73 mm, uma metralhadora coaxial de 7,62 mm e mísseis anti-tanque HJ-73."
  CHI_IFV_3: "ZSL-92B"
- CHI_IFV_3_desc: "The ZSL92 (also known as ZSL92) is a family of Chinese wheeled armored personnel carriers capable of carrying 9 passengers and also features a Welded steel hull and either an autocannon or a 12.7mm heavy machine gun."
+ CHI_IFV_3_desc: "O WZ-551 (também conhecido como ZSL92) é de veículos blindados de origem chinesa para transportes de pessoal sobre rodas, capazes de transportar até 9 passageiros e também apresenta um casco de aço soldado e um canhão automático ou uma metralhadora pesada de 12,7mm."
  CHI_IFV_4: "ZBD-04"
  CHI_IFV_4_desc: "O ZBD-04 ou Type 04 (designação industrial WZ502) é um veículo de combate de infantaria chinês. Pode transportar 7 passageiros e possui um canhão de 100 mm, um canhão automático de 30 mm, uma metralhadora coaxial de 7,62 mm e mísseis anti-tanque HJ-8."
  CHI_IFV_5: "ZBD-08"
