--- a/localisation/russian/MD_decisions_l_russian.yml
+++ b/localisation/russian/MD_decisions_l_russian.yml
@@ -366,7 +366,7 @@
  cost_6_0_blocked: "£treasury §R6.0§!"
  cost_6_0_tooltip: "Это будет стоить 6 §Hмиллиардов§!"
  cost_7_0: "£treasury 7.0"
- cost_7_0_blocked: "§R7.0§!£treasury"
+ cost_7_0_blocked: "£treasury §R7.0§!"
  cost_7_0_tooltip: "Это будет стоить 7 §Hмиллиардов§!"
  cost_7_5: "£treasury 7.5"
  cost_7_5_blocked: "£treasury §R7.5§!"
@@ -488,30 +488,30 @@
  cost_700_0: "£treasury 700.0"
  cost_700_0_blocked: "£treasury §R700.0§!"
  cost_700_0_tooltip: "Это будет стоить 700.0 §Hмиллиардов§!"
- command_power_more_than_145: "§H145§!£command_power"
- command_power_more_than_145_blocked: "§R145§!£command_power"
- command_power_more_than_125: "§H125§!£command_power"
- command_power_more_than_125_blocked: "§R125§!£command_power"
- command_power_more_than_100: "§H100§!£command_power"
- command_power_more_than_100_blocked: "§R100§!£command_power"
- command_power_more_than_75: "§H75§!£command_power"
- command_power_more_than_75_blocked: "§R75§!£command_power"
- command_power_more_than_50: "§H50§!£command_power"
- command_power_more_than_50_blocked: "§R50§!£command_power"
- command_power_more_than_40: "§H40§!£command_power"
- command_power_more_than_40_blocked: "§R40§!£command_power"
- command_power_more_than_35: "§H35§!£command_power"
- command_power_more_than_35_blocked: "§R35§!£command_power"
+ command_power_more_than_145: "£command_power §H145§!"
+ command_power_more_than_145_blocked: "£command_power §R145§!"
+ command_power_more_than_125: "£command_power §H125§!"
+ command_power_more_than_125_blocked: "£command_power §R125§!"
+ command_power_more_than_100: "£command_power §H100§!"
+ command_power_more_than_100_blocked: "£command_power §R100§!"
+ command_power_more_than_75: "£command_power §H75§!"
+ command_power_more_than_75_blocked: "£command_power §R75§!"
+ command_power_more_than_50: "£command_power §H50§!"
+ command_power_more_than_50_blocked: "£command_power §R50§!"
+ command_power_more_than_40: "£command_power §H40§!"
+ command_power_more_than_40_blocked: "£command_power §R40§!"
+ command_power_more_than_35: "£command_power §H35§!"
+ command_power_more_than_35_blocked: "£command_power §R35§!"
  command_power_more_than_30: "£command_power §H30§!"
  command_power_more_than_30_blocked: "£command_power §R30§!"
- command_power_more_than_25: "§H25§!£command_power"
- command_power_more_than_25_blocked: "§R25§!£command_power"
- command_power_more_than_20: "§H20§!£command_power"
- command_power_more_than_20_blocked: "§R20§!£command_power"
+ command_power_more_than_25: "£command_power §H25§!"
+ command_power_more_than_25_blocked: "£command_power §R25§!"
+ command_power_more_than_20: "£command_power §H20§!"
+ command_power_more_than_20_blocked: "£command_power §R20§!"
  command_power_more_than_15: "£command_power §H15§!"
  command_power_more_than_15_blocked: "£command_power §R15§!"
- command_power_more_than_10: "§H10§!£command_power"
- command_power_more_than_10_blocked: "§R10§!£command_power"
+ command_power_more_than_10: "£command_power §H10§!"
+ command_power_more_than_10_blocked: "£command_power §R10§!"
  cyber_cost_small: "§Y$§! [?treasury_cyber_small|2]"
  cyber_cost_medium: "§Y$§! [?treasury_cyber_medium|2]"
  cyber_cost_large: "§Y$§! [?treasury_cyber_large|2]"
