--- a/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
@@ -13,14 +13,14 @@
  GEO_pankis_resolve_desc: "最后，我们应该结束在与俄罗斯接壤的边界上发生的混乱，并保卫我们的土地。"
  GEO_sng_unite: "与独联体团结"
  GEO_sng_unite_desc: "独联体-天哪，这蓝旗里有多少快乐和相互合作。我无法抗拒..."
- GEO_shervad_victory: "§Y谢瓦尔德纳泽的胜利！§!"
+ GEO_shervad_victory: "§Y谢瓦尔德纳泽的胜利!§!"
  GEO_shervad_victory_desc: "谢瓦尔德纳泽赢得了选举。现在他得把事情了结了。"
  GEO_epoch_of_peace: "和平时代"
  GEO_epoch_of_peace_desc: "和平时代应该在格鲁吉亚揭幕。我们需要在没有任何战争的情况下实现繁荣。"
  GEO_give_passports_to_everyone: "给每个人签发护照"
  GEO_give_passports_to_everyone_desc: "哈"
  GEO_tskinvali_attack: "茨欣瓦利作战计划"
- GEO_tskinvali_attack_desc: "猛虎攻击计划 - 一项计划将奥塞梯归还格鲁吉亚的行动。或许值得迈出这个冒险的一步。"
+ GEO_tskinvali_attack_desc: "猛虎攻击计划 - 一项计划格鲁吉亚收复奥赛梯的行动。或许值得迈出这个冒险的一步。"
  GEO_pmc_support_instr: "邀请私人军事公司教官"
  GEO_pmc_support_instr_desc: "我们需要合格军事教官的帮助，才能成功地组织我们的军队，并为未来的进攻提高效率。"
  GEO_fail_war_geo2008: "2008年战争失败"
@@ -32,7 +32,7 @@
  GEO_osset_abkhaz_priznat: "承认阿布哈兹和奥塞梯"
  GEO_osset_abkhaz_priznat_desc: "现在是时候承认南奥塞梯和阿布哈兹是独立的独立国家，以此保证格鲁吉亚和整个地区的和平。"
  GEO_diplomatic_requests_fromrussia: "俄罗斯的外交要求"
- GEO_diplomatic_requests_fromrussia_desc: "吉姆·吉姆"
+ GEO_diplomatic_requests_fromrussia_desc: "给我 给我 给我"
  GEO_join_nato_geo: "加入北约"
  GEO_join_nato_geo_desc: "西方将吞噬我们"
  GEO_bezhenci_help_of_uf: "帮助难民"
@@ -266,7 +266,7 @@
  georg_chech.5.c: "嗯？什..啊？我们不在乎。"
  GEO_chechsns_pankis_idea: "边境峡谷中的车臣激进分子"
  georg_chech.6.t: "格鲁吉亚开始执行外交任务。"
- georg_chech.6.d: "几乎与美国和英国在阿富汗开始军事行动——反恐战争开始——同时，阿布哈兹-格鲁吉亚对抗地区爆发了武装冲突。从属于阿布哈兹但由格鲁吉亚控制的科多里峡谷，来自北高加索的格鲁吉亚游击队和武装分子的联合分遣队下降到苏呼米控制的领土。部队被拉到阿布哈兹-格鲁吉亚边界。格鲁吉亚议会要求俄罗斯维和部队撤出冲突地区，阿布哈兹反过来宣布将申请列入俄罗斯：武装阶段。我们将尝试与阿布哈兹驻莫斯科代表伊戈尔·阿赫巴、格鲁吉亚议员哈姆雷特·奇帕什维利和驻第比利斯记者尤里·瓦赫纳泽讨论这个话题。 因此，真正的战斗正在科多里峡谷中进行，同时出现了几个问题。科多里峡谷在地理上属于阿布哈兹，但直到最近才由格鲁吉亚控制。阿布哈兹驻莫斯科代表伊戈尔·阿赫巴发言。"
+ georg_chech.6.d: "几乎与美国和英国在阿富汗的军事行动开始 - 反恐战争开始的同时，阿布哈兹-格鲁吉亚对峙地区爆发了武装冲突。格鲁吉亚游击队和北高加索武装分子的联合部队从属于阿布哈兹但由格鲁吉亚控制的科多里峡谷进入了苏呼米控制的地区。部队被拉到阿布哈兹-格鲁吉亚边境。格鲁吉亚议会要求俄罗斯维和部队撤出冲突地区，阿布哈兹则宣布将申请纳入俄罗斯：武装阶段。我们将尝试与阿布哈兹驻莫斯科代表伊戈尔·阿赫巴、​​格鲁吉亚议员哈姆雷特·奇帕什维利和第比利斯通讯员尤里·瓦奇纳泽讨论这一话题。因此，科多里峡谷正在发生真正的战斗，同时出现了几个问题。科多里峡谷在地理上属于阿布哈兹，但直到最近才被格鲁吉亚控制。阿布哈兹驻莫斯科代表伊戈尔·阿赫巴正在讲话。"
  georg_chech.6.a: "奎奇尼与格莱维，当然.."
  georg_chech.6.b: "让我们准备一份共同协议吧。"
  georg_chech.6.c: "我们真的不在乎。"
